# tdgen-temporal

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  launch_ui.bat  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  scheduled_validate.yml
config/: scenario.yaml
docs/: REBUILD_PROMPT.md  TDGen_Temporal_v6.pptx  create_presentation.py
tdgen_temporal/: cli.py  schema.py
tdgen_temporal/db/: migrations.py  state_store.py
tdgen_temporal/engine/: backfill_runner.py  daily_runner.py  init_runner.py
tdgen_temporal/generators/: field_generators.py  ref_tables.py  seed.py  statement.py  transaction.py
tdgen_temporal/output/: delta_writer.py  snapshot_writer.py
tdgen_temporal/state_machines/: account.py  base.py  card.py  chargeback.py  collection_case.py  dispute.py  fraud_alert.py  score_record.py
tdgen_temporal/validators/: __init__.py  referential.py  results.py  state.py  temporal.py
tests/: test_smoke.py
ui/: app.py
